tests/ui/fail/incorrect_syntax.rs
fn main() {}

microtype_macro::microtype! {
    String => [Email]
}
