tests/ui/fail/incorrect_syntax.stderr
error: expected curly braces
 --> tests/ui/fail/incorrect_syntax.rs:4:12
  |
4 |     String => [Email]
  |            ^^
